--- a/src/partials/aboutMe.html
+++ b/src/partials/aboutMe.html
@@ -1,5 +1,5 @@
-<header class="header" id="header">
-</header>
+<section class="aboutMe" id="aboutMe">
+</section>
 
 <!--
     Внимательно проверяем файл styles.css и смотрим, что там прописано, чтобы не придумывать заново велосипед, а использовать руты и стандартный контейнер. 
