--- a/src/partials/workTogether.html
+++ b/src/partials/workTogether.html
@@ -1,5 +1,4 @@
-<header class="header" id="header">
-</header>
+<section class="workTogether" id="workTogether"></section>
 
 <!--
     Внимательно проверяем файл styles.css и смотрим, что там прописано, чтобы не придумывать заново велосипед, а использовать руты и стандартный контейнер. 
