--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,21 +5,60 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
 @import url('./header.css');
+@import url('./aboutMe.css');
+@import url('./benefits.css');
+@import url('./faq.css');
+@import url('./footer.css');
+@import url('./hero.css');
+@import url('./myProjects.css');
+@import url('./reviews.css');
+@import url('./techSkills.css');
+@import url('./workTogether.css');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+  --black: #292929;
+  --accet-green: #00b068;
+  --white: #f0f0f0;
+  --light-grey: #e4e5e6;
+  --light-accent: #bcdfd1;
+}
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+:root {
+  --font-family: "Poppins", sans-serif;
+  --second-family: "Impact", sans-serif;
+  --third-family: "Montserrat", sans-serif;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+.container {
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .container {
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+}
+
+.aboutMe,
+.benefits,
+.faq,
+.footer,
+.header,
+.hero,
+.myProjects,
+.reviews,
+.techSkills,
+.workTogether {
+  overflow-y: hidden;
 }
