--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,5 +1,5 @@
-<header class="header" id="header">
-</header>
+<section class="benefits" id="benefits">
+</section>
 
 <!--
     Внимательно проверяем файл styles.css и смотрим, что там прописано, чтобы не придумывать заново велосипед, а использовать руты и стандартный контейнер. 
