--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,5 +1,4 @@
-<header class="header" id="header">
-</header>
+<section class="faq" id="faq"></section>
 
 <!--
     Внимательно проверяем файл styles.css и смотрим, что там прописано, чтобы не придумывать заново велосипед, а использовать руты и стандартный контейнер. 
