footer_html&css*adaptive_nr1

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,30 @@
 <footer class="footer" id="footer">
+    <div class="container footer-container">
+        <a class="footer_logo">
+            LLOYD<span class="footer_logo_span">JEFFERSON.</span>
+        </a>
+        <ul class="footer_social_list">
+            <li class="footer_list_item">
+                <a href="https://www.instagram.com/goitclub/" class="footer_list_link">Instagram</a>
+            </li>
+            <li class="footer_list_item">
+                <a href="https://www.facebook.com/goITclub/" class="footer_list_link">Facebook</a>
+            </li>
+            <li class="footer_list_item">
+                <a href="https://www.linkedin.com/school/goit-start-your-career-in-it"
+                    class="footer_list_link">LinkedIn</a>
+            </li>
+            <li class="footer_list_item">
+                <a href="https://github.com/tsaigetsu/goit-js-project-05" class="footer_list_link">GitHub</a>
+            </li>
+        </ul>
+    </div>
+    <div class="container footer_copy">
+        <a class="footer_copy_link" href="../index.html">&copy; Copyright 2024. Made by
+            LloydJefferson</a>
+    </div>
+
+    </div>
 </footer>
 
 <!--
