--- a/src/partials/myProjects.html
+++ b/src/partials/myProjects.html
@@ -1,5 +1,9 @@
 <section class="myProjects" id="myProjects"></section>
-
+<div class="myProjects-container">
+<h2 class="myProjects-title">My <span class="myProjects-title-accent">Projects</span></h2>
+<ul class="projects-list"></ul>
+<button class="myProjects-btn" type="button">Load More</button>
+</div>
 <!--
     Внимательно проверяем файл styles.css и смотрим, что там прописано, чтобы не придумывать заново велосипед, а использовать руты и стандартный контейнер. 
     Название и id секции не меняем, работаем только со своим html и css партиалами. 
