--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,22 +7,25 @@
     Пример: header_html_nr3, hero_css_nr7, footere_adaptive_nr13
 -->
 <section class="hero" id="hero">
-  <div class="container hero-container">
-    <span class="hero_headline">HELLO, I AM</span>
-    <span class="hero_span">FULLSTACK DEVELOPER</span>
+  <div class="hero_decor_bg">
+    <div class="container hero-container">
+      <span class="hero_headline">HELLO, I AM</span>
+      <span class="hero_span">FULLSTACK DEVELOPER</span>
+    </div>
+
+    <div class="hero_button">
+      <p class="hero_text hero_button_arrow">Order the project</p>
+    </div>
+
+    <p class="hero_text">
+      I work with people all over the world to create
+      <span class="hero_text_color">impressive</span> and
+      <span class="hero_text_color">functional websites</span> that reflect each
+      client’s unique personality.
+    </p>
   </div>
 
-  <div class="hero_button">
-    <p class="hero_text">Order the project</p>
-  </div>
-
-  <p class="hero_text">
-    I work with people all over the world to create
-    <span class="hero_text_color">impressive</span> and
-    <span class="hero_text_color">functional websites</span> that reflect each
-    client’s unique personality.
-  </p>
-
+  <!-- social media -->
   <ul class="social_list">
     <li class="social_list_item">
       <a href="https://www.instagram.com/goitclub/" class="social_list_link"
