--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -19,7 +19,7 @@
             </li>
         </ul>
     </div>
-    <div class="container footer_copy">
+    <div class="footer_copy">
         <a class="footer_copy_link" href="../index.html">&copy; Copyright 2024. Made by
             LloydJefferson</a>
     </div>
