--- a/src/css/myProjects.css
+++ b/src/css/myProjects.css
@@ -1,4 +1,5 @@
 .container {
+  background-color: #f0f0f0;
   padding-top: 80px;
   padding-bottom: 80px;
 }
@@ -27,6 +28,8 @@
 }
 
 .myProjectImg {
+  display: block;
+  width: 100%;
   width: 320px;
   height: 184px;
   border-radius: 16px;
@@ -47,7 +50,8 @@
   width: 320px;
   color: #292929;
   font-family: Poppins;
-  font-size: 32px;
+  font-style: normal;
+  font-size: 30px;
   font-weight: 500;
   line-height: 1.25;
   letter-spacing: 0.01em;
@@ -75,6 +79,10 @@
   height: 48px;
   display: flex;
   align-items: center;
+}
+
+.my-project-link:hover {
+  background-color: #bbb;
 }
 
 .icon-arrow {
@@ -114,9 +122,74 @@
 }
 
 @media screen and (min-width: 768px) {
+  .container {
+    padding-top: 124px;
+    padding-bottom: 124px;
+  }
+
+  .myProjects-title {
+    margin-bottom: 60px;
+    font-size: 108px;
+    line-height: 1.15;
+    letter-spacing: 0.01em;
+  }
+
+  .projects-list {
+    gap: 60px;
+  }
+
+  .project-tech {
+    margin-top: 16px;
+  }
+
   .myProjectImg {
     width: 704px;
     height: 404px;
     border-radius: 24px;
+  }
+
+  .project-name {
+    margin-top: 20px;
+    width: 547px;
+    font-size: 36px;
+    line-height: 1.3;
+  }
+
+  .my-project-name-and-link-container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .myProjects-btn {
+    margin-top: 60px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .container {
+    padding-top: 164px;
+    padding-bottom: 164px;
+  }
+
+  .myProjects-title {
+    margin-bottom: 80px;
+  }
+
+  .projects-list {
+    gap: 60px;
+  }
+
+  .myProjectImg {
+    width: 1008px;
+    height: 612px;
+    border-radius: 24px;
+  }
+
+  .project-name {
+    width: 763px;
+  }
+
+  .myProjects-btn {
+    margin-top: 80px;
   }
 }
