--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,36 +1,39 @@
-.hero {
-    width: 360px;
-    height: 952px;
-    
-}
 
-.hero-container {
+/* .hero-container {
     display: flex;
     flex-direction: column;
     padding: 40px 0 0 24px;
-}
+} */
 
 .hero_decor_bg {
-    width: 320px;
-    height: 740px;
-background-image: url(../img/dekorBgBig1x.png);
-background-repeat: no-repeat;
-background-position: -32px 11px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+background: url(../img/dekorBgBig1x.png)no-repeat ,
+url(../img/dekorBgSmall1x.png)no-repeat
+;
+background-position: -32px 11px, 144px 350px;
+filter: blur(2px);
+    z-index: 1;
 }
 
-.hero_headline {
-    font-family: var(--second-family);
+.hero_content {
+    position: relative;
+    z-index: 2;
+}
+
+.hero_title {
+font-family: var(--second-family);
     font-size: 48px;
     letter-spacing: 0.05em;
     text-transform: uppercase;
+}
+
+.hero_title_headline {
     color: var(--black);
 }
 
-.hero_span {
-    font-family: var(--second-family);
-    font-size: 48px;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
+.hero_title_span {
     color: var(--accet-green);
 }
 
@@ -59,6 +62,8 @@ background-repeat: no-repeat;
     color: var(--accet-green);
 }
 
+
+/* -----social media------ */
 .social_list {
     padding-top: 32px;
     padding-bottom: 32px;
@@ -68,7 +73,6 @@ background-repeat: no-repeat;
     background-color: var(--light-grey);
 
 }
-
 .social_list_item {
     font-family: var(--font-family);
     text-align: center;
