--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,49 +7,54 @@
     Пример: header_html_nr3, hero_css_nr7, footere_adaptive_nr13
 -->
 <section class="hero" id="hero">
-  <div class="hero_decor_bg">
-    <div class="container hero-container">
-      <span class="hero_headline">HELLO, I AM</span>
-      <span class="hero_span">FULLSTACK DEVELOPER</span>
-    </div>
+  <div class="hero_decor_bg"></div>
+  <div class="container hero_content">
+    <h1 class="hero_title">
+      <span class="hero_title_headline">HELLO, I AM</span> <br />
+      <span class="hero_title_span">FULLSTACK DEVELOPER</span>
+    </h1>
 
     <div class="hero_button">
-      <p class="hero_text hero_button_arrow">Order the project</p>
+      <a href="#">
+        <span class="hero_text">Order the project</span>
+      </a>
     </div>
 
     <p class="hero_text">
       I work with people all over the world to create
       <span class="hero_text_color">impressive</span> and
       <span class="hero_text_color">functional websites</span> that reflect each
-      client’s unique personality.
+      client's unique personality.
     </p>
   </div>
 
   <!-- social media -->
-  <ul class="social_list">
-    <li class="social_list_item">
-      <a href="https://www.instagram.com/goitclub/" class="social_list_link"
-        >Instagram</a
-      >
-    </li>
-    <li class="social_list_item">
-      <a href="https://www.facebook.com/goITclub/" class="social_list_link"
-        >Facebook</a
-      >
-    </li>
-    <li class="social_list_item">
-      <a
-        href="https://www.linkedin.com/school/goit-start-your-career-in-it"
-        class="social_list_link"
-        >LinkedIn</a
-      >
-    </li>
-    <li class="social_list_item">
-      <a
-        href="https://github.com/tsaigetsu/goit-js-project-05"
-        class="social_list_link"
-        >GitHub</a
-      >
-    </li>
-  </ul>
+  <div class="social_media">
+    <ul class="social_list">
+      <li class="social_list_item">
+        <a href="https://www.instagram.com/goitclub/" class="social_list_link"
+          >Instagram</a
+        >
+      </li>
+      <li class="social_list_item">
+        <a href="https://www.facebook.com/goITclub/" class="social_list_link"
+          >Facebook</a
+        >
+      </li>
+      <li class="social_list_item">
+        <a
+          href="https://www.linkedin.com/school/goit-start-your-career-in-it"
+          class="social_list_link"
+          >LinkedIn</a
+        >
+      </li>
+      <li class="social_list_item">
+        <a
+          href="https://github.com/tsaigetsu/goit-js-project-05"
+          class="social_list_link"
+          >GitHub</a
+        >
+      </li>
+    </ul>
+  </div>
 </section>
