muProject?addJS/nr4

--- a/src/partials/myProjects.html
+++ b/src/partials/myProjects.html
@@ -1,5 +1,5 @@
 <section class="myProjects" id="myProjects"></section>
-<div class="myProjects-container">
+<div class="container">
 <h2 class="myProjects-title">My <span class="myProjects-title-accent">Projects</span></h2>
 <ul class="projects-list"></ul>
 <button class="myProjects-btn" type="button">Load More</button>
