--- a/src/css/myProjects.css
+++ b/src/css/myProjects.css
@@ -25,6 +25,7 @@
   flex-direction: column;
   align-items: center;
   gap: 40px;
+  gap: 40px;
 }
 
 .myProjectImg {
@@ -51,6 +52,7 @@
   color: #292929;
   font-family: Poppins;
   font-style: normal;
+  font-size: 30px;
   font-size: 30px;
   font-weight: 500;
   line-height: 1.25;
