--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -23,6 +23,7 @@ filter: blur(2px);
 }
 
 .hero_title {
+    margin-top: 96px;
 font-family: var(--second-family);
     font-size: 48px;
     letter-spacing: 0.05em;
@@ -39,19 +40,18 @@ font-family: var(--second-family);
 
 .hero_button {
     display: flex;
-    width: auto;
-    height: auto;
+    width: 320px;
+    height: 92px;
     margin-top: 40px;
     margin-bottom: 40px;
 }
 
-.hero_button_arrow::after {
-background-image: url(../img/Arrow1.png);
-background-repeat: no-repeat;
+.hero_button::before{
+background: url(../img/Arrow1.png) no-repeat;
 }
 
 .hero_text {
-    margin: 0px 20px 72px 20px;
+    margin: 0px 20px;
     width: auto;
     height: auto;
     text-transform: uppercase;
@@ -65,6 +65,7 @@ background-repeat: no-repeat;
 
 /* -----social media------ */
 .social_list {
+    margin-top: 72px;
     padding-top: 32px;
     padding-bottom: 32px;
     display: flex;
