correct names in css

--- a/src/partials/myProjects.html
+++ b/src/partials/myProjects.html
@@ -1,6 +1,6 @@
 <section class="myProjects" id="myProjects"></section>
 <div class="container my-projects-container">
-<h2 class="myProjects-title">My <span class="myProjects-title-accent">Projects</span></h2>
+<h2 class="my-projects-title">My <span class="my-projects-title-accent">Projects</span></h2>
 <ul class="projects-list"></ul>
-<button class="myProjects-btn btn-loadmore" type="button">Load More</button>
+<button class="load-more-btn btn-loadmore" type="button">Load More</button>
 </div>
