--- a/src/css/myProjects.css
+++ b/src/css/myProjects.css
@@ -4,7 +4,7 @@
   padding-bottom: 80px;
 }
 
-.myProjects-title {
+.my-projects-title {
   margin-bottom: 40px;
   color: #292929;
   font-family: Impact;
@@ -16,7 +16,7 @@
   text-align: center;
 }
 
-.myProjects-title-accent {
+.my-projects-title-accent {
   color: #00b068;
 }
 
@@ -28,7 +28,7 @@
   gap: 40px;
 }
 
-.myProjectImg {
+.my-project-img {
   display: block;
   width: 100%;
   width: 320px;
@@ -92,7 +92,7 @@
   margin-left: 12px;
 }
 
-.myProjects-btn {
+.load-more-btn {
   display: block;
   margin: 0 auto;
   margin-top: 40px;
@@ -125,13 +125,15 @@
   bottom: 12px;
 }
 
+/* ======== Adaptive for tablet ========*/
+
 @media screen and (min-width: 768px) {
   .my-projects-container {
     padding-top: 124px;
     padding-bottom: 124px;
   }
 
-  .myProjects-title {
+  .my-projects-title {
     margin-bottom: 60px;
     font-size: 108px;
     line-height: 1.15;
@@ -146,7 +148,7 @@
     margin-top: 16px;
   }
 
-  .myProjectImg {
+  .my-project-img {
     width: 704px;
     height: 404px;
     border-radius: 24px;
@@ -164,10 +166,12 @@
     justify-content: space-between;
   }
 
-  .myProjects-btn {
+  .load-more-btn {
     margin-top: 60px;
   }
 }
+
+/* ======== Adaptive for desktop ========*/
 
 @media screen and (min-width: 1280px) {
   .my-projects-container {
@@ -175,15 +179,15 @@
     padding-bottom: 164px;
   }
 
-  .myProjects-title {
+  .my-projects-title {
     margin-bottom: 80px;
   }
 
   .projects-list {
-    gap: 60px;
+    gap: 80px;
   }
 
-  .myProjectImg {
+  .my-project-img {
     width: 1008px;
     height: 612px;
     border-radius: 24px;
@@ -193,7 +197,7 @@
     width: 763px;
   }
 
-  .myProjects-btn {
+  .load-more-btn {
     margin-top: 80px;
   }
 }
