--- a/src/partials/workTogether.html
+++ b/src/partials/workTogether.html
@@ -5,25 +5,28 @@
 <p class="workTogether-text">Contact me to transform your ideas into exceptional solutions.</p>
 <address class="workTogether-contacts">
     <ul class="workTogether-list">
-        <li> <svg class="workTogether-icons" width="24" height="24">
+        <li class="workTogether-list-item"> <svg class="workTogether-icon" width="24" height="24">
           <use href="../public/symbol-defs.svg#icon-phone"></use>
-        </svg> <a href="tel:+380904567890" target="_blank" rel="noopener noreferrer">+38 090 456 78 90 </a></li>
-        <li> <svg class="workTogether-icons" width="24" height="24">
+        </svg> <a class="workTogether-link" href="tel:+380904567890" target="_blank" rel="noopener noreferrer">+38 090 456 78 90 </a></li>
+        <li class="workTogether-list-item"> <svg class="workTogether-icon" width="24" height="24">
           <use href="../public/symbol-defs.svg#icon-mail"></use>
-        </svg> <a href="mailto:lloydjefferson@gmail.com" target="_blank" rel="noopener noreferrer" >lloydjefferson@gmail.com</a></li>
-        <li> <svg class="workTogether-icons" width="24" height="24">
+        </svg> <a class="workTogether-link" href="mailto:lloydjefferson@gmail.com" target="_blank" rel="noopener noreferrer" >lloydjefferson@gmail.com</a></li>
+        <li class="workTogether-list-item"> <svg class="workTogether-icon" width="24" height="24">
           <use href="../public/symbol-defs.svg#icon-map"></use>
-        </svg> <a href="http://www.google.com/maps/place/New+York,+NY,+USA" target="_blank" rel="noopener noreferrer"></a>USA, New York</li>
+        </svg> <a class="workTogether-link" href="http://www.google.com/maps/place/New+York,+NY,+USA" target="_blank" rel="noopener noreferrer"></a> USA, New York</li>
 </ul>
 </address>
-
+        </div>
 <form class="workTogether-form" name="workTogether-form">
     <div class="workTogether-form-input">
-<input class="workTogether-input" type="email" name="email" placeholder="" pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$">
+<input class="workTogether-input" type="email" name="email" placeholder pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$">
 <label for="email" class="workTogether-input-label"></label>
+<svg class="workTogether-inp-icon" width="16" height="16">
+  <use href="../public/symbol-defs.svg#icon-ep_success-filled"></use>
+</svg>
 </div>
 <div class="workTogether-textarea-label">
-  <textarea class="workTogether-textarea" name="message" placeholder="" ></textarea>
+  <textarea class="workTogether-textarea" name="message" placeholder ></textarea>
 <label for="message" class="workTogether-textarea-label"></label>  
 </div>
 
@@ -32,7 +35,7 @@
 </form>
         </div>
         
-    </div>
+    
     
 </section>
 
