hero_html_button_nr1

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -13,13 +13,15 @@
       <span class="hero_title_headline">HELLO, I AM</span> <br />
       <span class="hero_title_span">FULLSTACK DEVELOPER</span>
     </h1>
+    <!-- button -->
+    <a class="hero_button_ref" href="#">
+      <div class="hero_button_arrow"></div>
+      <div class="hero_text btn_txt">Order the project</div>
 
-    <div class="hero_button">
-      <a href="#">
-        <span class="hero_text">Order the project</span>
-      </a>
-    </div>
+      <div class="hero_button_rectangle"></div>
+    </a>
 
+    <!-- text -->
     <p class="hero_text">
       I work with people all over the world to create
       <span class="hero_text_color">impressive</span> and
