--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,9 +1,4 @@
 
-/* .hero-container {
-    display: flex;
-    flex-direction: column;
-    padding: 40px 0 0 24px;
-} */
 
 .hero_decor_bg {
     position: absolute;
@@ -12,8 +7,8 @@
 background: url(../img/dekorBgBig1x.png)no-repeat ,
 url(../img/dekorBgSmall1x.png)no-repeat
 ;
-background-position: -32px 11px, 144px 350px;
-filter: blur(2px);
+background-position: -2px 11px, 144px 330px;
+filter: blur(3px);
     z-index: 1;
 }
 
@@ -25,7 +20,7 @@ filter: blur(2px);
 .hero_title {
     margin-top: 96px;
 font-family: var(--second-family);
-    font-size: 48px;
+    font-size: 64px;
     letter-spacing: 0.05em;
     text-transform: uppercase;
 }
@@ -41,7 +36,7 @@ font-family: var(--second-family);
 .hero_button_ref {
     align-items: center;
     position: relative;
-    /* z-index: 1; */
+    z-index: 1;
     display: flex;
       width: 320px;
     height: 92px;
