--- a/src/css/myProjects.css
+++ b/src/css/myProjects.css
@@ -206,7 +206,7 @@
 
 .dark-mode-on {
   .my-projects-container {
-    background-color: #2a2d32;
+    background-color: #1e2023;
   }
 
   .my-projects-title {
