will finish js a bit later

--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -1,51 +1,210 @@
-.faq-section {
+.faq {
+  padding-top: 40px;
+  padding-bottom: 80px;
   margin: 0 auto;
 }
 
-.faq-header {
-  margin-bottom: 20px;
-  text-align: center;
-  font-family: Impact;
-  font-size: 52px;
-  font-weight: 400;
-  line-height: 64px;
+.faq-container {
+  overflow: visible;
+}
+
+.faq-title {
   text-align: left;
+  margin-bottom: 40px;
+  max-width: 320px;
   text-transform: uppercase;
-
-  letter-spacing: 1.79px;
+  letter-spacing: 0.03em;
+  font-weight: 400;
 }
 
-.faq-question-span {
-  color: #00a651;
-}
-
-.faq-section {
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  overflow: hidden;
+.faq-span {
+  color: #00b068;
 }
 
 .faq-item {
-  border-bottom: 1px solid #ccc;
+  background-color: #f0f0f0;
+  border-radius: 0;
+  padding: 28px 24px;
+  border-bottom: 1px solid #cccccc;
+  position: relative;
+  transition: background-color 250ms ease, border-radius 250ms ease;
 }
 
-.faq-question-text {
-  color: rgb(41, 41, 41);
-  font-family: Poppins;
-  font-size: 18px;
+.faq-item.active {
+  background-color: #bcdfd1;
+  border-radius: 16px;
+  border-bottom: none;
+}
+
+.faq-item-title {
+  color: #292929;
+  max-width: 224px;
   font-weight: 400;
-  line-height: 28px;
-  letter-spacing: 0.5px;
-  text-align: left;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-bottom: 0;
 }
 
-.faq-answer {
-  padding: 10px;
-  display: none;
-  background-color: #e9e9e9;
+.faq-item.active .faq-item-title {
+  margin-bottom: 24px;
 }
 
-.accordion-item.active .accordion-content {
+.faq-text {
+  overflow: hidden;
+  max-height: 168px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.03em;
+}
+
+.faq-btn {
+  background-color: transparent;
+  fill: none;
+  border: 0;
+  cursor: pointer;
+  position: absolute;
+  top: 32px;
+  right: 28px;
+  padding: 0;
+  color: #292929;
+}
+
+.faq-btn:hover,
+.faq-btn:focus {
+  outline: 0;
+}
+
+.faq-btn .faq-btn-open {
+  transform: rotate(180deg);
+}
+
+.faq-btn .faq-btn-open,
+.faq-btn .faq-btn-close {
+  width: 24px;
+  height: 24px;
+  stroke: #292929;
+}
+
+.faq-item .faq-btn .faq-btn-close {
   display: block;
+}
+
+.faq-item .faq-btn .faq-btn-open {
+  display: none;
+}
+
+.faq-item.active .faq-btn .faq-btn-close {
+  display: none;
+}
+
+.faq-item.active .faq-btn .faq-btn-open {
+  display: block;
+}
+
+/* -------------------min-width: 768px------------------- */
+
+@media screen and (min-width: 768px) {
+  .faq {
+    padding-top: 62px;
+    padding-bottom: 124px;
+  }
+
+  .faq-title {
+    font-family: Impact;
+    font-size: 108px;
+    font-weight: 400;
+    line-height: 124px;
+    letter-spacing: 1.7999999523162842px;
+    text-align: left;
+
+    margin-bottom: 60px;
+    max-width: 704px;
+    letter-spacing: 0.02em;
+  }
+
+  .faq-item-title {
+    max-width: 600px;
+    font-size: 20px;
+    line-height: 1.6;
+    margin-bottom: 0;
+  }
+
+  .faq-text {
+    max-height: 72px;
+  }
+}
+
+/* -------------------min-width: 1280px------------------- */
+
+@media screen and (min-width: 1280px) {
+  .faq {
+    padding-top: 82px;
+    padding-bottom: 164px;
+    width: 1280px;
+    position: relative;
+  }
+
+  .faq::before {
+    content: '';
+    position: absolute;
+    width: 526px;
+    height: 408px;
+    background: url(../img/faq/decor-faq@1x.webp);
+    background-size: cover;
+    background-repeat: no-repeat;
+    bottom: 164px;
+    left: 32px;
+    transform: scaleX(-1);
+    z-index: -1;
+  }
+
+  @media screen and (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .faq::before {
+      background-image: url(../img/faq/decor-faq@2x.webp);
+    }
+  }
+
+  .faq-container {
+    position: relative;
+    width: 100%;
+    overflow: visible;
+    height: 1020px;
+  }
+
+  .faq-title {
+    margin-bottom: 0;
+    max-width: 520px;
+    position: absolute;
+    top: 0;
+    left: 32px;
+
+    font-family: Impact;
+    font-size: 108px;
+    font-weight: 400;
+    line-height: 124px;
+    letter-spacing: 1.79x;
+    text-align: left;
+  }
+
+  .faq-list {
+    position: absolute;
+    bottom: 0;
+    right: 32px;
+    max-width: 592px;
+  }
+
+  .faq-item-title {
+    max-width: 500px;
+    margin-bottom: 0;
+  }
+
+  .faq-text {
+    max-height: 96px;
+  }
 }
