--- a/src/partials/techSkills.html
+++ b/src/partials/techSkills.html
@@ -1,4 +1,46 @@
-<section class="techSkills" id="techSkills"></section>
+<section class="techSkills" id="techSkills">
+    <h2 class="techSkills-title visually-hidden">Tech Skills</h2>
+    <div class="techSkills-marquee top">
+        <div class="marquee-inner">
+            <ul class="marquee-line">
+                <li class="marquee-line-element">HTML/CSS</li>
+                <li class="marquee-line-element">JAVASCRIPT</li>
+                <li class="marquee-line-element">REACT</li>
+                <li class="marquee-line-element">NODE.JS</li>
+                <li class="marquee-line-element">REACT NATIVE</li>
+                <li class="marquee-line-element">TYPESCRIPT</li>
+            </ul>
+            <ul class="marquee-line">
+                <li class="marquee-line-element">HTML/CSS</li>
+                <li class="marquee-line-element">JAVASCRIPT</li>
+                <li class="marquee-line-element">REACT</li>
+                <li class="marquee-line-element">NODE.JS</li>
+                <li class="marquee-line-element">REACT NATIVE</li>
+                <li class="marquee-line-element">TYPESCRIPT</li>
+            </ul>
+        </div>
+    </div>
+    <div class="techSkills-marquee bot">
+        <div class="marquee-inner">
+            <ul class="marquee-line">
+                <li class="marquee-line-element">TYPESCRIPT</li>
+                <li class="marquee-line-element">REACT NATIVE</li>
+                <li class="marquee-line-element">NODE.JS</li>
+                <li class="marquee-line-element">REACT</li>
+                <li class="marquee-line-element">JAVASCRIPT</li>
+                <li class="marquee-line-element">HTML/CSS</li>
+            </ul>
+            <ul class="marquee-line">
+                <li class="marquee-line-element">TYPESCRIPT</li>
+                <li class="marquee-line-element">REACT NATIVE</li>
+                <li class="marquee-line-element">NODE.JS</li>
+                <li class="marquee-line-element">REACT</li>
+                <li class="marquee-line-element">JAVASCRIPT</li>
+                <li class="marquee-line-element">HTML/CSS</li>
+            </ul>
+        </div>
+    </div>
+</section>
 
 <!--
     Внимательно проверяем файл styles.css и смотрим, что там прописано, чтобы не придумывать заново велосипед, а использовать руты и стандартный контейнер. 
