--- a/src/css/workTogether.css
+++ b/src/css/workTogether.css
@@ -3,13 +3,9 @@
     padding: 80px 0;
     display: flex;
     flex-direction: column;
-    background: #F0F0F0;
 
 }
 
-.workTogether-container {
-   
-}
 
 .workTogether-title {
 color:#292929;
@@ -47,11 +43,6 @@ font-family: Poppins;
     text-transform: uppercase;
 }
 
-.workTogether-contacts {
-font-style: normal;
-
-    
-}
 
 .workTogether-list {
     display: flex;
@@ -67,32 +58,52 @@ display: flex;
 align-items: flex-start;
 }
 .workTogether-link {
+    color:#292929;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 1.5;
+    letter-spacing: 0.03em;
     margin-left: 16px;
 }
-.workTogether-form {
 
+/* form */
+
+.workTogether-form {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+color: rgba(41, 41, 41, 0.40);
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 1.5;
+    letter-spacing: 0.03em;
+    
 }
 
+/* input container */
 .workTogether-form-input {
-    display: flex;
-    width: 320px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 32px;
+    position: relative;
 }
 
 .workTogether-input {
-    display: flex;
+    width: 100%;
     height: 48px;
+    display: flex;
     padding: 16px;
     align-items: center;
     gap: 10px;
-    align-self: stretch;
-    max-width: 360px;
     border-radius: 8px;
+    background-color: #E4E5E6;
     border: none;
-    background: #E4E5E6;
-    color: rgba(41, 41, 41, 0.40);
+    color: #292929;
+}
+
+.workTogether-input::placeholder {
+color: rgba(41, 41, 41, 0.40);
     font-family: Poppins;
     font-size: 16px;
     font-style: normal;
@@ -100,128 +111,239 @@ align-items: flex-start;
     line-height: 1.5;
     letter-spacing: 0.03em;
 }
+ 
+.workTogether-input:hover,
+.workTogether-input:focus {
+background-color: #E4E5E6;
+    border-radius: 8px;
+    border: none;
+    outline: none;
+}
+/* when enter incorrect value-text color */
+.workTogether-input:not(:placeholder-shown):invalid {
+    color: #E74A3B;
+}
+/* when enter correct value-text color */
+.workTogether-input:not(:placeholder-shown):valid {
+color: #292929;
+}
 
-.workTogether-input:hover {
+.workTogether-error-message {
+    color: #E74A3B;
+    font-family: Poppins;
+    font-size: 12px;
+    display: none;
+}
+
+.workTogether-inp-icon {
+    position: absolute;
+    right: 16px;
+    width: 16px;
+    height: 16px;
+    top: 16px;
+    flex-shrink: 0;
+    display: none;
+}
+
+/* incorrect input - error appears */
+.workTogether-input:not(:placeholder-shown):invalid~.workTogether-error-message {
+    display: block;
+}
+/* correct input - successful icon appears */
+.workTogether-input:not(:placeholder-shown):valid ~ .workTogether-inp-icon {
+    display: block;
+}
+
+/* textarea */
+
+.workTogether-textarea {
+    padding: 16px;
+    align-items: center;
+    gap: 10px;
+    border-radius: 8px;
+    background-color: #E4E5E6;
+    border: none;
+    height: 128px;
+    width: 100%;
+    color: #292929;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 1.5;
+    letter-spacing: 0.03em;
+}
+.workTogether-textarea::placeholder {
+color: rgba(41, 41, 41, 0.40);
+}
+.workTogether-textarea:hover,
+.workTogether-textarea:focus {
+    border-radius: 8px;
+    border: none;
+    background-color: #E4E5E6;
+    outline: none;
+}
+
+/* button */
+.workTogether-button {
+    display: inline-block;
+    padding: 12px 24px;
+    border-radius: 8px;
+    border: none;
+    background-color: #00B068;
+    color: #F0F0F0;
+    text-align: center;
+    width: 100%;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+.workTogether-button:hover, :focus {
+background: #009156;
+}
+/* tablet */
+
+@media screen and (min-width: 768px) {
+    .workTogether {
+        padding-top: 124px;
+        background-image: url('../img/work-together/decor-bg.png');
+        background-position: 98% 7%;
+        background-repeat: no-repeat;
+        background-size: 336px 260px;
+    } 
+
+ @media screen and (min-device-pixel-ratio: 2),
+ (min-resolution: 192dpi),
+ (min-resolution: 2dppx) {
+     .workTogether {
+         background-image: url('../img/work-together/decor-bg-2.png');
+     }
+ }
+ .workTogether-title {
+    font-family: Impact;
+    font-size: 108px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.15;
+    letter-spacing: 0.02em;
+    text-transform: uppercase;
+ }
+.workTogether-content {
+width: 639px;
+padding-bottom: 60px;
+}
+.workTogether-text {
+color: #292929;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.6;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    width: 488px;
     
 }
+.workTogether-list {
+    flex-direction: row;
 
-.workTogether-input-label {}
-
-.workTogether-textarea-label {}
-
-.workTogether-textarea {}
-
-.workTogether-button {}
-.workTogether {
-    padding: 80px 0;
+}
+.workTogether-button {
     display: flex;
-    flex-direction: column;
-    background: #F0F0F0;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 10px;
+    width: 173px;
+}
 
 }
 
-.workTogether-container {
+/* desktop */
+
+@media screen and (min-width: 1280px) {
+    .workTogether {
+        padding: 164px 0;
+        background-image: url('../img/work-together/decor-bg-4.png');
+        background-position: 88% 9%;
+        background-repeat: no-repeat;
+        background-size: 526px 408px;
+      
+    } 
+    .workTogether .container {
+       margin: 0;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        row-gap: 80px;
+        column-gap: 136px;
+       
+    }
+.workTogether-title {
+    display: block;
+    width: 514px;
+    height: 248px;
+    margin-right: 700px;
+    
+}
+.workTogether-content {
+   width: 488px;
+   gap: 120px;
+   padding-bottom: 0;
    
 }
 
-.workTogether-title {
-color:#292929;
-    font-family: Impact;
-    font-size: 52px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.23;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    margin-bottom: 40px;
-}
-
-.workTogether-span {
-color: #00B068;
-}
-
-.workTogether-content {
-display: flex;
-    width: 320px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 32px;
-    padding-bottom: 40px;
-}
-
-.workTogether-text {
-color: #292929;
-font-family: Poppins;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.55;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-}
-
-.workTogether-contacts {
-font-style: normal;
-
-    
-}
-
 .workTogether-list {
-    display: flex;
     flex-direction: column;
-    align-items: flex-start;
     gap: 16px;
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 1.5;
-}
-.workTogether-list-item {
-display: flex;
-align-items: flex-start;
-}
-.workTogether-link {
-    margin-left: 16px;
 }
 .workTogether-form {
-
-}
-
-.workTogether-form-input {
-    display: flex;
-    width: 320px;
+    width: 592px;
     flex-direction: column;
-    align-items: flex-start;
     gap: 32px;
-}
-
-.workTogether-input {
-    display: flex;
-    height: 48px;
-    padding: 16px;
-    align-items: center;
-    gap: 10px;
-    align-self: stretch;
-    max-width: 360px;
-    border-radius: 8px;
-    border: none;
-    background: #E4E5E6;
-    color: rgba(41, 41, 41, 0.40);
-    font-family: Poppins;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: 1.5;
-    letter-spacing: 0.03em;
-}
-
-.workTogether-input:hover {
     
 }
 
-.workTogether-input-label {}
-
-.workTogether-textarea-label {}
-
-.workTogether-textarea {}
-
-.workTogether-button {}
+}
+/* dark mode */
+.dark-mode-on {
+    background-color: var(--black);
+    
+        .benefits_title {
+            color: var(--white);
+        }
+    
+        .workTogether-title {
+            color: var(--white);
+        }
+    
+        .workTogether-text {
+            color: var(--white);
+        }
+        .workTogether-contacts {
+            color: var(--white) ;
+        }
+        .workTogether-link {
+            color: var(--white);
+        }
+        .workTogether-form {
+            color: var(--white);
+        }
+        .workTogether-input {
+            background-color: #2A2D32;;
+        }
+        .workTogether-input::placeholder {
+            color: rgba(240, 240, 240, 0.40);
+        }
+        .workTogether-textarea {
+            color: var(--white);
+            background: #2A2D32;
+        }
+        .workTogether-textarea::placeholder {
+            color: rgba(240, 240, 240, 0.40);
+        }
+        .workTogether-button {
+            color: var(--white);
+        }
+        .workTogether-input:not(:placeholder-shown):valid {
+            color: var(--white);
+                }
+}
